# simple-scotty-test

./: .gitignore  LICENSE  README.md  simple-scotty-test.cabal
app/: DbTest.hs  Main.hs
src/: Lib.hs
