name:                simple-scotty-test
version:             0.1.0.0
-- synopsis:
description:         Testing scotty
homepage:            https://github.com/tjlaxs/simple-scotty-test#readme
license:             BSD3
license-file:        LICENSE
author:              Tero Laxström
maintainer:          tlax@neonpeons.com
copyright:           2017 Tero Laxström
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , blaze-html
  default-language:    Haskell2010

executable simple-scotty-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-scotty-test
                     , scotty
  default-language:    Haskell2010

test-suite simple-scotty-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-scotty-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tjlaxs/simple-scotty-test
